Fixed bug #39350 (crash with implode("\n", array(false))).